# Benchmarking-TreeSort

./: CMakeLists.txt  README.md
Funcoes/: main.c
Funcoes/Algoritmos_Ordenacao/: Algoritmos.h  Mergesort.c  Quicksort.c
Funcoes/Algoritmos_Ordenação/: Insertion.c  Mergesort.c  Quicksort.c  README.md  Selection.c
Funcoes/GeraVetor/: GeraVetor.c  GeraVetor.h
Funcoes/Menu/: Menu.c
Funcoes/Tabela/: Tabela.c  Tabela.h
Funcoes/TreeSort/: TreeSort.c  TreeSort.h
Funcoes/iniciarFuncoes/: iniciarFuncoes.c  iniciarFuncoes.h
